kubernetes/apps/volsync-system/volsync/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: volsync
spec:
  description: "Network policy for VolSync"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: volsync
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: volsync-system
    # Allow webhook from kube-apiserver
    - fromEntities:
        - kube-apiserver
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: volsync-system
    # Allow kube-apiserver access
    - toEntities:
        - kube-apiserver
    # Allow access to backup destinations (S3, etc)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
